--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');
 
 *,
 *::after,
@@ -8,13 +8,43 @@
   box-sizing: inherit;
 }
 
+:root {
+  /* ### LAYOUT */
+  --ly-mobile: 375px;
+  --ly-desktop: 1440px;
+
+  /* ### COLORS */
+  /* ## primary */
+  --clr-prim-dark-cyan: hsl(158, 36%, 37%);
+  --clr-prim-cream: hsl(30, 38%, 92%);
+  --clr-prim-btn-hover: hsl(158, 36%, 19%);
+
+  /* ## neutral */
+  --clr-neutral-very-dark-blue: hsl(212, 21%, 14%);
+  --clr-neutral-dark-grayish-blue: hsl(228, 12%, 48%);
+  --clr-neutral-white: hsl(0, 0%, 100%);
+
+  /* ### TYPOGRAPHY */
+  /* ## font */
+  /* # font family */
+  --ff-fraunces: 'Fraunces', serif;
+  --ff-montserrat: 'Montserrat', sans-serif;
+
+  /* # font weight */
+  --fw-medium: 500;
+  --fw-bold: 700;
+
+  /* # font size */
+  --fs-text: 1.4rem;
+
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
   line-height: 1.6;
   text-rendering: optimizeSpeed;
   width: 100%;
